feature: added swagger
